--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My Web Page</title>
   </head>
   <body>
+    <h1>This is a heading.</h1>
     Hello there, awesome person!
   </body>
 </html>
