--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>My Web Page</title>
   </head>
   <body>
+    <ol>
+      <li>This</li>
+      <li>Is an</li>
+      <li>Ordered list</li>
+    </ol>
     <img src="https://octodex.github.com/images/vinyltocat.png">
     <h1>This is a heading.</h1>
     Hello there, awesome person!
